--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,52 @@ img {
   display: block;
   max-width: 100%;
 }
+
+
+button {
+  
+    border-radius: 5px;
+    background-color: black;
+    padding: 10px 30px;
+    font-size: 18px;
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+    
+}
+
+button:hover {
+  background-color: white;
+  color: black;
+  border-color: black;
+}
+
+input {
+  
+    border-radius: 5px;
+    border-color: black;
+    padding: 10px 20px;
+    font-size: 18px;
+    text-align: center;
+   
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.label {
+  font-size: 20px;
+  margin-top: -15px;
+}
+
+.value{
+  font-size: 60px;
+}
+
+.timer {
+  display: flex;
+}
