--- a/src/css/common.css
+++ b/src/css/common.css
@@ -77,3 +77,15 @@ label {
   flex-direction: column;
   margin-bottom: 10px;
 }
+
+a {
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+a:hover,
+a:focus {
+  color: blue;
+}
+
